--- a/l1regression.ipynb
+++ b/l1regression.ipynb
@@ -886,7 +886,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Differences and Similarity**\n",
+    "\n",
+    "I found it particulary interesting that all three of the models have a very similar accuracy score of around 63%. The main difference in the results of the three models tend to be the beta coefficents, which makes sense mathematically as we know the regularization term adds a penalty if the l1 or l2 norm is large. We can notice that when we apply l2 regualrization some of the beta values become smaller in magnitude. Where as when we apply the l1 regualrization we end up with 3 values that are 0. What is interesting is that the largest coefficent in magnitude in the other models becomes one that goes to 0. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Final Remarks**\n",
+    "\n",
+    "\n",
     "I think it was very intersting to evaluate this as I have learned about linear regression in a couple different contexts such as in linear algebra class, as well as in an applied machine learning course. In the past when I had used ridge and lasso regression  I think I understood the idea that regularization was trying to prevent the model from overfitting however I did not truly understand how the techniques worked and what the difference between using a l1 regularization term vs a l2 regularization term. It seems that the l1 regularization term tries to force beta values to zero when they have small values  This is important to consider especially when dealing with a data set like this where we have the features of different scales as if we do not apply something like a standard scaler then coefficents that deal with larger values such as things like square footage would tend to be pushed towards 0 as an increase in 1 square foot would not change the price much but adding something like another room would increase the value to be much larger, for this reason it is important to first scale the data which we are working on so all the values in the dataset are within the same range. Then afterwards when we get our coefficents we can rescale back to the original format. "
    ]
   }
